--- a/alunos/webapp/i18n/i18n.properties
+++ b/alunos/webapp/i18n/i18n.properties
@@ -3,4 +3,6 @@ appTitle=Alunos
 appDescription=App Alunos
 nome=Nome
 sobrenome=Sobrenome
+dtnascimento=Dt. Nascimento
+usuario=Usuário
 panelText=Alunos
