--- a/alunos/webapp/i18n/i18n.properties
+++ b/alunos/webapp/i18n/i18n.properties
@@ -6,3 +6,6 @@ sobrenome=Sobrenome
 dtnascimento=Dt. Nascimento
 usuario=Usuário
 panelText=Alunos
+DelSuccess=Aluno eliminado com sucesso
+DelError=Erro ao eliminar aluno
+competencia=Competências
